# webgpu

./: .gitattributes  .gitignore  README.md  create_enums.py  dev.py  example.ipynb  index.html  init.js  pyproject.toml  webgpu.ipynb
.github/workflows/: deploy.yml  pages.yml  test.yml
docs/: api.rst  api_backend.rst  api_canvas_interaction.rst  api_core.rst  api_geometry_color.rst  api_notebooks.rst  compute.ipynb  conf.py  create_showcase.py  deployment.rst  getting_started.rst  guide.rst  guide_compute_deploy.rst  guide_concepts.rst  guide_interaction.rst  guide_performance.rst  guide_renderers.rst  index.rst  installation.rst  instanced_shapes.ipynb  interactions.rst  introduction.html  introduction.ipynb  performance.rst  selection.ipynb  testing.rst  tutorials.rst  user_guide.rst
docs/_static/: custom.css  showcase.html
docs/notebooks/: 01_introduction.ipynb  02_webgpu_basics.ipynb  03_built_in_renderers.ipynb  04_colormaps_and_clipping.ipynb  05_interaction_and_selection.ipynb  06_compute_shaders.ipynb  (+2 more)
examples/: compute.ipynb  demo_triangle.py  first_shader.ipynb  hello_world.ipynb  introduction.ipynb  multiple_render_objects.ipynb  websocket.ipynb
nicegui/: main.py  webgpu_scene.js
tests/: Dockerfile  Dockerfile.base  conftest.py  run_tests.sh  test_export.py  test_export_notebook.ipynb  test_memory.py  test_webgpu.py
tutorials/: introduction.ipynb
webgpu/: __init__.py  background.py  camera.py  canvas.py  clipping.py  colormap.py  draw.py  font.py  fonts.json  gizmo.py  gpu.py  gui_param.py  input_handler.py  jupyter.py  jupyter_pyodide.py  labels.py  light.py  lilgui.py  main.py  mesh.py  notebook_to_html.py  platform.py  proxy.js  proxy.py  render_object.py  renderer.py  scene.py  shapes.py  test.html  test.py  testing.py  triangles.py  uniforms.py  utils.py  vectors.py  webgpu_api.py
(+38 files in other folders)
