[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webgpu"
version = "0.0.1"
description = "A Python based WebGPU API using pyodide"
authors = [
    { name = "Matthias Hochsteger", email = "mhochsteger@cerbsim.com" }
]
license = { text = " LGPLv2+" }
keywords = ["WebGPU", "compute shaders", "graphics", "Python", "pyodide"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent"
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.package-data]
"webgpu" = ["shaders/*.wgsl", "fonts.json"]
